[package]
name = "succotash"
version = "0.1.0"
authors = ["Andrei Stepanenko <ftvkyo@gmail.com>"]
edition = "2018"


[[bin]]
name = "succotash"
path = "bin/main.rs"

[lib]
name = "libsuccotash"
path = "src/lib.rs"


[dependencies]
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"

clap = "2.33.3"

async-std = "1.9.0"

image = "0.23.14"
